# DVector

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: 1_quickstart.md  2_api_reference.md  3_examples_guide.md
examples/: CMakeLists.txt  harmonic_oscillator.cpp  lorenz_simulation.cpp
include/IGO/: DVector.hpp
